# mbox-email

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY_COMPLIANCE.md  CONTRIBUTING.md  DASHBOARD_REDESIGN.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FILES_SUMMARY.txt  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_SETUP.md  DEV_QUICKREF.md  DEV_SETUP.md  DOCKER_QUICKSTART.md  Dockerfile  EASY_INSTALL.md  FILES_CREATED.md  FUTURE_DIRECTIONS.md  GUI_WRAPPER.md  HIGH_PERFORMANCE_DESIGN.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MBOX_INDEXER.py  OPTIMIZATIONS_IMPLEMENTED.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PARALLEL_IMPLEMENTATION.py  PERFORMANCE_ANALYSIS.md  PERFORMANCE_API_REFERENCE.md  PERFORMANCE_ARCHITECTURE.md  PERFORMANCE_FINDINGS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_QUICK_REF.md  PERFORMANCE_SUMMARY.md  QUICK_START.md  README.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md  UX_DELIVERABLES_SUMMARY.md  (+12 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  rust-ci.yml
config/: config.yaml
dashboard_templates/: README.md  index.html
dashboard_templates/css/: main.css
dashboard_templates/js/: utils.js
mail_parser/: __init__.py  __main__.py  cli.py
mail_parser/analysis/: __init__.py  duplicate_detector.py  statistics.py
mail_parser/api/: __init__.py  gmail_client.py
mail_parser/core/: __init__.py  email_processor.py  filename_generator.py  mbox_parser.py  mime_handler.py
mail_parser/dashboard/: generator.py
mail_parser/indexing/: __init__.py  database.py
mail_parser/organizers/: __init__.py  base_organizer.py  date_organizer.py  domain_organizer.py  thread_organizer.py
mail_parser/performance/: __init__.py  batch_writer.py  gmail_optimizer.py  mbox_index_builder.py  parallel_processor.py
mail_parser/renderers/: __init__.py  html_renderer.py
mail_parser/renderers/templates/: email.html  error.html
mail_parser_rust/: Cargo.toml  INSTALL.md  LICENSE  Makefile  QUICKREF.md  README.md  SETUP_SUMMARY.md  build.sh  clippy.toml  pyproject.toml  rustfmt.toml
mail_parser_rust/.cargo/: config.toml
mail_parser_rust/.github/workflows/: CI.yml
mail_parser_rust/benches/: email_parsing.rs
mail_parser_rust/src/: lib.rs
mail_parser_rust/test_data/: sample_email.txt
scripts/: README.md  build.sh  clean.sh  lint.sh  setup.sh  test.sh
