[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "mail_parser_rust"
version = "0.1.0"
description = "High-performance email parsing extension for Python via Rust/PyO3"
authors = [
    {name = "David T. Martel", email = "david.martel@auricleinc.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["email", "parser", "mbox", "performance", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Communications :: Email",
    "Topic :: Text Processing",
]

[project.urls]
Repository = "https://github.com/auricleinc/mail_analysis"
Documentation = "https://github.com/auricleinc/mail_analysis/blob/main/mail_parser_rust/README.md"

[tool.maturin]
# Build settings for maturin (pure Rust extension, no Python source)
features = ["pyo3/extension-module"]
module-name = "mail_parser_rust"
bindings = "pyo3"

# Strip debug symbols in release builds
strip = true

# Include additional files in the wheel
include = [
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "Cargo.lock",
    "src/**/*.rs",
]
